--- a/Module/WeatherPy.ipynb
+++ b/Module/WeatherPy.ipynb
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "19ccf19d",
+   "id": "8dec749f",
    "metadata": {},
    "outputs": [
     {
@@ -822,8 +822,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "c9fcac1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.27.1'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "requests.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "12d108ff",
+   "id": "f3c9b392",
    "metadata": {},
    "outputs": [],
    "source": []
