updated gitignore file

--- a/Module/API_practice.ipynb
+++ b/Module/API_practice.ipynb
@@ -137,25 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "164a5656",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2e1fcda2ae1022fa9a5021cd3bc7ce74'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the API key.\n",
     "from weather_module import api_key\n",
-    "api_key"
+    "# api_key"
    ]
   },
   {
